--- a/test/test_extractor_depend_1repo_1hop.ipynb
+++ b/test/test_extractor_depend_1repo_1hop.ipynb
@@ -2,25 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "timeout date-fns/date-fns\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 147.302s\n",
+      "Ran 1 test in 2.403s\n",
       "\n",
       "OK\n"
      ]
@@ -28,21 +21,27 @@
    ],
    "source": [
     "import unittest\n",
-    "#import extractor_depend\n",
     "import extractor_depend_1repo\n",
     "import os\n",
     "\n",
     "class Testextract(unittest.TestCase):\n",
     "    def test_extractor(self):\n",
     "        input_file = '../xkcd2347/3k_valid_repos'\n",
-    "        output_file = '3k_valid_repos_test_2hop'\n",
-    "        git_hub_key = '44406061d90ca56e84711ccb72149de99ecb1c53'\n",
-    "        hop = 2\n",
+    "        output_file = '1_repodata_1hop'\n",
+    "        git_hub_key = 'a4ff939e41a1843bb116b30b045ce8999f8a2d1e'\n",
+    "        hop = 1\n",
     "        extractor_depend_1repo.getDependencies(input_file, output_file, git_hub_key, hop)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    unittest.main(argv=['first-arg-is-ignored'], exit=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
